--- a/reactTicTacToe/src/styles.scss
+++ b/reactTicTacToe/src/styles.scss
@@ -20,3 +20,21 @@
   left: 35%;
   top: 15%;
 }
+
+.currentStep{
+  position: absolute;
+  left: 35%;
+  top: 10%;
+}
+
+.WinnerWindow{
+  width: 300px;
+  height: 100px;
+font-size: 50px;
+  position: absolute;
+  left: 35%;
+  top: 25%;
+  button{
+    width: 100%;
+  }
+}
