--- a/react_koa_blackjack/client/src/styles.scss
+++ b/react_koa_blackjack/client/src/styles.scss
@@ -16,24 +16,27 @@ $color: #958223;
   position: absolute;
   right: 0;
   background-color: $color;
+display: flex;
+  justify-content: right;
+
 
   .AddPlayersForm {
     text-align: right;
-    width: 350px;
     position: absolute;
     top: 310px;
     right: 1px;
+    display: flex;
+    flex-direction: column;
 
     input {
-      width: 60%;
       height: 25px;
       border-radius: 5px;
       margin: 3px;
     }
 
     button {
-      width: 62%;
       height: 25px;
+      border-radius: 5px;
       margin: 3px;
     }
   }
@@ -77,7 +80,8 @@ $color: #958223;
     display: inline-block;
     background-color: rgba(115, 100, 27, 0.83);
     border-radius: 5px;
-    span{
+
+    span {
       font-weight: bold;
       font-size: 20px;
       margin: 5px;
@@ -90,7 +94,8 @@ $color: #958223;
     margin: auto;
     background-color: rgba(185, 252, 0, 0.83);
     border-radius: 5px;
-    h2{
+
+    h2 {
       margin: 5px;
     }
   }
@@ -115,18 +120,86 @@ $color: #958223;
   background-color: aliceblue;
   border-radius: 5px;
   margin: 3px;
+
   img {
     width: 35%;
     padding: 3px;
   }
+
   .bottomImage {
     position: absolute;
     bottom: 0;
     right: 0;
   }
-  .bottomName{
+
+  .bottomName {
     position: absolute;
     bottom: 0;
     right: 35px;
+  }
+}
+
+.playerListItem {
+  display: flex;
+  justify-content: space-between;
+  border-radius: 5px;
+  margin: 3px;
+  background-color: #A5D6A7;
+  width: 191px;
+
+  button.deletePlayerButton {
+    height: 25px;
+    width: 25px;
+  }
+
+  div{
+    padding: 3px;
+    height: 25px;
+    border-radius: 5px;
+    margin: 3px;
+  }
+}
+
+:root {
+  --main-color: #111;
+  --loader-color: #4CAF50;
+  --back-color: #A5D6A7;
+  --time: 3s;
+  --size: 6px;
+}
+
+.loader {
+  background-color: var(--main-color);
+  width: 100%;
+  height: 3px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: flex-start;
+  z-index: 100000;
+}
+
+.loader__element {
+  height: var(--size);
+  width: 100%;
+  background: var(--back-color);
+
+}
+
+.loader__element:before {
+  content: '';
+  display: block;
+  background-color: var(--loader-color);
+  height: var(--size);
+  width: 0;
+  animation: getWidth var(--time) ease-in infinite;
+}
+
+@keyframes getWidth {
+  100% {
+    width: 100%;
   }
 }
