--- a/react_koa_blackjack/client/src/styles.scss
+++ b/react_koa_blackjack/client/src/styles.scss
@@ -6,13 +6,11 @@ $color: #958223;
   box-sizing: border-box;
 }
 
-#app{
+#app {
   min-height: 100vh;
 }
 
-body{
-  //width: 100%;
-  //height: 100%;
+body {
   background-color: $color;
 }
 
@@ -24,7 +22,7 @@ body{
 
 .sideBlock {
   width: 200px;
-  height: 100%;
+  height: calc(100% - 100px);
   position: fixed;
   right: 0;
   background-color: $color;
@@ -48,6 +46,19 @@ body{
       border-radius: 5px;
       margin: 3px;
     }
+  }
+}
+
+.restartButtons {
+  text-align: right;
+
+  margin-top: 315px;
+
+  button {
+    display: inline-block;
+    height: 35px;
+    width: 80%;
+    margin: 3px 5px;
   }
 
 }
@@ -75,15 +86,15 @@ body{
 
 .gameField {
   width: calc(100% - 200px);
-  height: 100%;
+  height: calc(100% - 100px);
   display: flex;
   flex-wrap: wrap;
   position: absolute;
   background-color: $color;
 
   .winnerTable {
-    width: 65%;
-    height: 35%;
+    text-align: center;
+    width: 45%;
     margin: auto;
     background-color: rgba(185, 252, 0, 0.83);
     border-radius: 5px;
@@ -108,7 +119,7 @@ body{
     margin: 5px;
   }
 
-  .winnerCardsContainer{
+  .winnerCardsContainer {
     height: 100%;
   }
 
@@ -117,8 +128,10 @@ body{
 
 .footer {
   bottom: 0;
+  position: fixed;
+  z-index: 3;
   width: 100%;
-  height: 20%;
+  height: 100px;
   background-color: $color;
   text-align: center;
 }
@@ -171,7 +184,7 @@ body{
   }
 }
 
-@media screen  and(min-width: 1150px){
+@media screen and(min-width: 1150px) {
   .playerTable {
     width: 45%;
     height: 45%;
