--- a/nextJS/components/WeHelp/weHelp.module.scss
+++ b/nextJS/components/WeHelp/weHelp.module.scss
@@ -3,43 +3,358 @@
   margin-top: 140px;
 }
 
-
 .container1 {
   display: flex;
+  height: 750px;
+  width: 100%;
 
-  .descript {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 42px;
-    line-height: 49px;
-    letter-spacing: 0.1em;
-    text-transform: capitalize;
-    color: #FFFFFF;
-    text-align: center;
-    height: 50%;
-    width: 100%;
+
+  .leftBlock {
+    width: 50%;
+
+    .descript {
+      font-family: Roboto;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 42px;
+      line-height: 49px;
+      letter-spacing: 0.1em;
+      text-transform: capitalize;
+      color: #FFFFFF;
+      text-align: center;
+      height: 50%;
+      width: 100%;
+
+      padding: 107px;
+    }
+
+    .sectionContainer {
+      width: 100%;
+      height: 50%;
+      display: flex;
+
+      .section1 {
+        width: 50%;
+        height: 100%;
+        background-color: #2D315420;
+        margin: 0;
+        display: flex;
+        flex-direction: column;
+        padding: 12% 0 0 0;
+
+        .countYears {
+          font-family: Montserrat;
+          font-style: normal;
+          font-weight: bold;
+          font-size: 64px;
+          line-height: 128.19%;
+          text-align: center;
+          letter-spacing: 0.1em;
+          text-transform: capitalize;
+          color: #FFC20A;
+        }
+
+        div {
+          margin: 0 auto;
+        }
+      }
+
+
+      .section2 {
+        width: 50%;
+        height: 100%;
+        background-color: #2D315480;
+
+        .descript1 {
+          font-family: Roboto;
+          font-style: normal;
+          font-weight: bold;
+          font-size: 28px;
+          line-height: 33px;
+          letter-spacing: 0.1em;
+          text-transform: capitalize;
+          color: #FFFFFF;
+
+          margin: 106px 94px 0 61px;
+        }
+
+        .descript2 {
+          font-family: Roboto;
+          font-style: normal;
+          font-weight: 300;
+          font-size: 24px;
+          line-height: 128.19%;
+          letter-spacing: 0.1em;
+          text-transform: capitalize;
+          color: #FFFFFF;
+          margin-top: 30px;
+          margin-left: 61px;
+        }
+
+      }
+    }
+
   }
+
 
   .gadjetImage {
     background-image: url("../../public/images/WeHelp/image.png");
     background-color: #2D3154;
-    width: 1131px;
+    width: 50%;
 
-    height: 781px;
+    height: 750px;
     position: absolute;
     right: 0;
   }
+}
 
-  .section1 {
+.container2 {
+  margin-top: 2px;
+  display: flex;
+
+  height: 750px;
+
+  background-color: #2D315420;
+
+  .manImage {
+    background-image: url("../../public/images/WeHelp/image2.png");
     width: 50%;
-    height: 50%;
-    background-color: #2D315420;
+    height: 670px;
+    margin-top: 80px;
   }
 
-  .section2 {
+  .rightBlock {
+    height: 100%;
     width: 50%;
-    height: 50%;
-    background-color: #2D315480;
+    position: relative;
+
+    .section1 {
+      width: 100%;
+      height: 344px;
+      background: linear-gradient(180deg, #222945 0%, #271A45 100%);
+      display: flex;
+      flex-direction: column;
+
+      .descript1 {
+        font-family: Montserrat;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 64px;
+        line-height: 128.19%;
+        text-align: center;
+        letter-spacing: 0.1em;
+        text-transform: capitalize;
+
+        color: #FFC20A;
+
+        margin-top: 112px;
+      }
+
+
+      .descript2 {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 28px;
+        text-align: center;
+        letter-spacing: 0.1em;
+        text-transform: capitalize;
+
+        color: #FFFFFF;
+        margin-top: 12px;
+      }
+    }
+
+    .section2 {
+      height: 408px;
+      width: 50%;
+      background-color: #2D315430;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+
+      .descript1 {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 28px;
+        line-height: 33px;
+        letter-spacing: 0.1em;
+        text-transform: capitalize;
+
+        color: #FFFFFF;
+
+        margin-top: 135px;
+        padding-left: 71px;
+      }
+
+      .descript2 {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 24px;
+        line-height: 128.19%;
+        letter-spacing: 0.1em;
+        text-transform: capitalize;
+
+        color: #FFFFFF;
+        margin-top: 21px;
+        padding-left: 71px;
+      }
+
+    }
+
+    .section3 {
+      height: 408px;
+      width: 50%;
+      background-color: #2D315420;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+
+      div {
+        background-image: url("../../public/images/WeHelp/rocketImage.png");
+        width: 276px;
+        height: 335px;
+        margin: 38px 138px auto auto;
+      }
+
+    }
+
+  }
+
+}
+
+.container3 {
+  height: 750px;
+  width: 100%;
+  display: flex;
+
+
+  .peopleImage {
+    background-image: url("../../public/images/WeHelp/peopleImage.png");
+    width: 50%;
+    height: 688px;
+    margin: 44px auto auto auto;
+  }
+
+  .leftBlock {
+    height: 750px;
+    width: 50%;
+    position: relative;
+
+    .primaryText {
+      font-family: Montserrat;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 64px;
+      line-height: 128.19%;
+      /* identical to box height, or 82px */
+
+      text-align: center;
+      letter-spacing: 0.1em;
+      text-transform: capitalize;
+
+      color: #FFC20A;
+    }
+
+    .section1 {
+      width: 100%;
+      height: 50%;
+      position: absolute;
+      top: 0;
+      background: linear-gradient(180deg, #222945 10%, #271A45 80%);
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      .descript {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 28px;
+        text-align: center;
+        letter-spacing: 0.1em;
+        text-transform: capitalize;
+
+        color: #FFFFFF;
+      }
+
+    }
+
+    .section2 {
+      width: 50%;
+      height: 50%;
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      background: rgba(45, 49, 84, 0.2);
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      .descript {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 28px;
+        text-align: center;
+        letter-spacing: 0.1em;
+        text-transform: capitalize;
+
+        color: #FFFFFF;
+      }
+    }
+
+    .section3 {
+      width: 50%;
+      height: 50%;
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      background: rgba(45, 49, 84, 0.3);
+
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+
+      .descript1 {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 28px;
+        line-height: 33px;
+        letter-spacing: 0.1em;
+        text-transform: capitalize;
+
+        color: #FFFFFF;
+      }
+
+      .descript2 {
+        font-family: Roboto;
+        font-style: normal;
+        font-weight: 300;
+        font-size: 24px;
+        line-height: 128.19%;
+        /* or 31px */
+
+        letter-spacing: 0.1em;
+        text-transform: capitalize;
+
+        color: #FFFFFF;
+
+        margin-top: 31px;
+      }
+
+    }
+
   }
 }
