--- a/nextJS/components/Header/header.module.scss
+++ b/nextJS/components/Header/header.module.scss
@@ -1,8 +1,9 @@
+$marginContainer: 3%;
+
 .container {
   position: relative;
   height: 300px;
-  margin: 92px 127px 0 178px;
-
+  margin: $marginContainer*0.92 $marginContainer*1.27 0 $marginContainer*1.78;
 }
 
 .logo {
@@ -32,7 +33,7 @@
 .shopifyApps {
   width: 139px;
   height: 24px;
-  margin-right: 107px;
+  margin-right:  107px;
 }
 
 .GetAppNow {
@@ -77,11 +78,12 @@
   }
 }
 
-//.arrow{
-//  width: 17px;
-//  height: 12px;
-//}
+.nameLink {
+  display: flex;
+}
 
-
-
+.arrow {
+  margin-left: 7px;
+  margin-top: 7px;
+}
 
