--- a/nextJS/components/Review/review.module.scss
+++ b/nextJS/components/Review/review.module.scss
@@ -1,23 +1,17 @@
-
 .mainContainer {
   display: flex;
   position: relative;
 }
 
 .imagePeople {
-  background-image: url("../../public/images/Review/Review.png");
-  width: 1024px;
-  height: 747px;
+  width: 50%;
   margin-top: 66px;
 }
 
-
 .rightBlock {
   width: 50%;
-  height: 830px;
 
   .contentBlock {
-    width: 672px;
     height: 413px;
     margin: 299px 79px auto auto;
 
@@ -27,7 +21,7 @@
       font-family: ABeeZee;
       font-style: normal;
       font-weight: normal;
-      font-size: 120px;
+      font-size: 7.5rem;
       line-height: 142px;
       text-align: center;
       letter-spacing: 0.1em;
@@ -42,7 +36,7 @@
       font-family: Roboto;
       font-style: normal;
       font-weight: 500;
-      font-size: 28px;
+      font-size: 1.75rem;
       line-height: 128.19%;
       letter-spacing: 0.1em;
       text-transform: capitalize;
@@ -53,7 +47,7 @@
       font-family: Roboto;
       font-style: normal;
       font-weight: normal;
-      font-size: 22px;
+      font-size: 1.375rem;
       line-height: 171.69%;
       letter-spacing: 0.1em;
       text-transform: capitalize;
@@ -77,7 +71,7 @@
         font-family: Roboto;
         font-style: normal;
         font-weight: normal;
-        font-size: 24px;
+        font-size: 1.5rem;
         line-height: 128.19%;
         letter-spacing: 0.1em;
         text-transform: capitalize;
@@ -88,19 +82,13 @@
     }
 
     .arrows {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-
-
-        img{
-          margin: 0 55px;
-        }
-
+      display: flex;
+      width: 120px;
+      //min-width: 100px;
+      justify-content: space-between;
+      margin: auto 0 auto auto;
     }
 
   }
 
 }
-
-
