--- a/nextJS/components/WeHelp/weHelp.module.scss
+++ b/nextJS/components/WeHelp/weHelp.module.scss
@@ -5,7 +5,6 @@
 
 .container1 {
   display: flex;
-  height: 750px;
   width: 100%;
 
 
@@ -16,16 +15,17 @@
       font-family: Roboto;
       font-style: normal;
       font-weight: normal;
-      font-size: 42px;
+      font-size: 2.625rem;
       line-height: 49px;
       letter-spacing: 0.1em;
       text-transform: capitalize;
       color: #FFFFFF;
       text-align: center;
+
       height: 50%;
       width: 100%;
 
-      padding: 107px;
+      padding: 50px;
     }
 
     .sectionContainer {
@@ -46,7 +46,7 @@
           font-family: Montserrat;
           font-style: normal;
           font-weight: bold;
-          font-size: 64px;
+          font-size: 4rem;
           line-height: 128.19%;
           text-align: center;
           letter-spacing: 0.1em;
@@ -69,26 +69,26 @@
           font-family: Roboto;
           font-style: normal;
           font-weight: bold;
-          font-size: 28px;
+          font-size: 1.75rem;
           line-height: 33px;
           letter-spacing: 0.1em;
           text-transform: capitalize;
           color: #FFFFFF;
 
-          margin: 106px 94px 0 61px;
+          margin: 25px 30px 0 30px;
         }
 
         .descript2 {
           font-family: Roboto;
           font-style: normal;
           font-weight: 300;
-          font-size: 24px;
+          font-size: 1.5rem;
           line-height: 128.19%;
           letter-spacing: 0.1em;
           text-transform: capitalize;
           color: #FFFFFF;
-          margin-top: 30px;
-          margin-left: 61px;
+          margin-top: 15px;
+          margin-left: 30px;
         }
 
       }
@@ -98,29 +98,20 @@
 
 
   .gadjetImage {
-    background-image: url("../../public/images/WeHelp/image.png");
     background-color: #2D3154;
     width: 50%;
-
-    height: 750px;
-    position: absolute;
-    right: 0;
   }
 }
 
 .container2 {
   margin-top: 2px;
   display: flex;
-
   height: 750px;
-
   background-color: #2D315420;
 
   .manImage {
-    background-image: url("../../public/images/WeHelp/image2.png");
     width: 50%;
-    height: 670px;
-    margin-top: 80px;
+    margin: auto auto 0 auto;
   }
 
   .rightBlock {
@@ -131,7 +122,6 @@
     .section1 {
       width: 100%;
       height: 344px;
-      background: linear-gradient(180deg, #222945 0%, #271A45 100%);
       display: flex;
       flex-direction: column;
 
@@ -139,7 +129,7 @@
         font-family: Montserrat;
         font-style: normal;
         font-weight: bold;
-        font-size: 64px;
+        font-size: 4rem;
         line-height: 128.19%;
         text-align: center;
         letter-spacing: 0.1em;
@@ -155,7 +145,7 @@
         font-family: Roboto;
         font-style: normal;
         font-weight: bold;
-        font-size: 24px;
+        font-size: 1.5rem;
         line-height: 28px;
         text-align: center;
         letter-spacing: 0.1em;
@@ -178,14 +168,14 @@
         font-family: Roboto;
         font-style: normal;
         font-weight: bold;
-        font-size: 28px;
+        font-size: 1.75rem;
         line-height: 33px;
         letter-spacing: 0.1em;
         text-transform: capitalize;
 
         color: #FFFFFF;
 
-        margin-top: 135px;
+        margin-top: 50px;
         padding-left: 71px;
       }
 
@@ -193,7 +183,7 @@
         font-family: Roboto;
         font-style: normal;
         font-weight: 300;
-        font-size: 24px;
+        font-size:1.5rem;
         line-height: 128.19%;
         letter-spacing: 0.1em;
         text-transform: capitalize;
@@ -213,13 +203,6 @@
       bottom: 0;
       right: 0;
 
-      div {
-        background-image: url("../../public/images/WeHelp/rocketImage.png");
-        width: 276px;
-        height: 335px;
-        margin: 38px 138px auto auto;
-      }
-
     }
 
   }
@@ -227,20 +210,15 @@
 }
 
 .container3 {
-  height: 750px;
   width: 100%;
   display: flex;
 
-
   .peopleImage {
-    background-image: url("../../public/images/WeHelp/peopleImage.png");
     width: 50%;
-    height: 688px;
-    margin: 44px auto auto auto;
+    margin: auto auto 0 auto;
   }
 
   .leftBlock {
-    height: 750px;
     width: 50%;
     position: relative;
 
@@ -248,10 +226,8 @@
       font-family: Montserrat;
       font-style: normal;
       font-weight: bold;
-      font-size: 64px;
+      font-size: 4rem;
       line-height: 128.19%;
-      /* identical to box height, or 82px */
-
       text-align: center;
       letter-spacing: 0.1em;
       text-transform: capitalize;
@@ -264,8 +240,6 @@
       height: 50%;
       position: absolute;
       top: 0;
-      background: linear-gradient(180deg, #222945 10%, #271A45 80%);
-
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -275,7 +249,7 @@
         font-family: Roboto;
         font-style: normal;
         font-weight: bold;
-        font-size: 24px;
+        font-size: 1.5rem;
         line-height: 28px;
         text-align: center;
         letter-spacing: 0.1em;
@@ -303,7 +277,7 @@
         font-family: Roboto;
         font-style: normal;
         font-weight: bold;
-        font-size: 24px;
+        font-size: 1.5rem;
         line-height: 28px;
         text-align: center;
         letter-spacing: 0.1em;
@@ -330,7 +304,7 @@
         font-family: Roboto;
         font-style: normal;
         font-weight: bold;
-        font-size: 28px;
+        font-size: 1.5rem;
         line-height: 33px;
         letter-spacing: 0.1em;
         text-transform: capitalize;
@@ -342,10 +316,8 @@
         font-family: Roboto;
         font-style: normal;
         font-weight: 300;
-        font-size: 24px;
+        font-size: 1.5rem;
         line-height: 128.19%;
-        /* or 31px */
-
         letter-spacing: 0.1em;
         text-transform: capitalize;
 
