--- a/nextJS/styles/globals.css
+++ b/nextJS/styles/globals.css
@@ -1,10 +1,12 @@
 html,
 body {
   padding: 0;
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   background-color: #232946 ;
+  font-size: 100% ;
+  max-width: 1440px;
+  margin: auto;
 }
 
 a {
@@ -14,4 +16,22 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+@media (max-width: 1500px) {
+  html{
+    font-size: 95%;
+  }
+}
+
+@media (max-width: 1150px) {
+  html{
+    font-size: 85%;
+  }
+}
+
+@media (max-width: 850px) {
+  html{
+    font-size: 75%;
+  }
 }
