--- a/nextJS/components/Featured/featured.module.scss
+++ b/nextJS/components/Featured/featured.module.scss
@@ -1,10 +1,9 @@
 .mainContainer {
-  margin: 218px auto;
+  margin:135px auto 0;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   text-align: center;
-  //max-width: 1221px;
 }
 
 .container {
@@ -23,5 +22,4 @@
 
   color: #FFC20A;
 }
-
 
