--- a/nextJS/components/FindOut/findout.module.scss
+++ b/nextJS/components/FindOut/findout.module.scss
@@ -3,7 +3,7 @@
   position: relative;
 
   .leftBlock {
-    padding: 128px 0 0 113px;
+    padding: 78px 0 0 113px;
 
     .descript1 {
       font-family: Roboto;
@@ -70,12 +70,25 @@
         letter-spacing: 0.03em;
         text-transform: capitalize;
         color: #FFFFFF;
-
       }
 
       .mouse {
         margin: 10px;
       }
     }
+  }
+}
+
+@media (max-width: 1100px) {
+  .container .rightBlock .mainCircuit {
+    width: 250px;
+    height: 250px;
+  }
+}
+
+@media (max-width: 850px) {
+  .container .rightBlock .mainCircuit {
+    width: 170px;
+    height: 170px;
   }
 }
