--- a/nextJS/components/Header/header.module.scss
+++ b/nextJS/components/Header/header.module.scss
@@ -1,24 +1,17 @@
-$marginContainer: 3%;
-
 .container {
-  position: relative;
-  height: 300px;
-  margin: $marginContainer*0.92 $marginContainer*1.27 0 $marginContainer*1.78;
-}
+  padding: 67px 70px 0 100px;
+  height: 150px;
+  display: flex;
 
-.logo {
-  position: absolute;
-  top: 0;
-  left: 0;
 }
 
 .navigation {
-  position: absolute;
-  top: 0;
-  right: 0;
+  margin: 0 0 auto auto;
   color: #eaeaea;
   display: flex;
-
+  justify-content: space-between;
+  width: 45%;
+  min-width: 370px;
 
   a {
     font-family: Montserrat;
@@ -38,15 +31,50 @@ $marginContainer: 3%;
 .shopifyApps {
   width: 139px;
   height: 24px;
-  margin-right: 107px;
+  z-index: 3;
+
+  .dropDown {
+    flex-direction: column;
+    background-color: #FFFFFF;
+    width: 120%;
+    max-width: 256px;
+    overflow: hidden;
+    height: 0;
+    transition: all 0.7s ease-in-out;
+
+    a {
+      font-family: Roboto, sans-serif;
+      font-style: normal;
+      font-weight: 900;
+      font-size: 15px;
+      line-height: 20px;
+      display: flex;
+      align-items: center;
+      color: #202223;
+      padding: 9px 0 9px 44px;
+
+
+    }
+
+    a:hover {
+      color: #DEA90B;
+      border-left: solid #DEA90B;
+    }
+
+  }
 }
 
 .shopifyApps:hover {
   .dropDown {
     display: flex;
+    height: 180px;
+    padding: 15px 15px 21px 0;
+  }
+
+  .arrow {
+    transform: rotate(0);
   }
 }
-
 
 .GetAppNow {
   border: 2px solid #FFC20A;
@@ -58,43 +86,91 @@ $marginContainer: 3%;
 .homeLink {
   width: 100px;
   height: 24px;
-  margin-right: 65px;
-}
-
-.dropDown {
-  display: none;
-  flex-direction: column;
-  background-color: #FFFFFF;
-
-  width: 215px;
-  padding: 22px 21px 21px 21px;
-  margin-top: 22px;
-  margin-right: 245px;
-
-  a {
-    font-family: Montserrat;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 1.25rem;
-    line-height: 24px;
-    letter-spacing: 0.03em;
-    color: #232946;
-    padding: 9px 39px 9px 14px;
-  }
-
-  .selectLink {
-    border: 2px solid #FFC20A;
-    box-sizing: border-box;
-    border-radius: 5px;
-  }
+  padding-bottom: 35px;
 }
 
 .nameLink {
   display: flex;
+  height: 135%;
+  border-bottom: #E3AF11 dashed;
 }
 
 .arrow {
   margin-left: 7px;
-  margin-top: 7px;
+  margin-top: 6px;
+  transform: rotate(-90deg)
+}
+
+.hamburger {
+  display: none;
+}
+
+.mobileSideBar {
+  position: fixed;
+  z-index: 3;
+
+  top: 0;
+  right: 0;
+  width: 100%;
+
+  max-width: 428px;
+  height: 100%;
+
+  overflow: hidden;
+  background-color: #4e7285;
+  transition: all 1s linear;
+  transform: translateX(430px);
+}
+
+.mobileSideBar_active {
+  position: fixed;
+  z-index: 3;
+
+  top: 0;
+  right: 0;
+
+  width: 100%;
+  max-width: 428px;
+  height: 100%;
+
+  overflow: hidden;
+  background-color: #4e7285;
+  transition: all 1s linear;
+  transform: translateX(0)
+}
+
+@media (max-width: 1050px) {
+  .shopifyApps .dropDown {
+    width: 100%;
+  }
+}
+
+@media (max-width: 1150px) {
+  .shopifyApps .dropDown {
+    width: 105%;
+  }
+}
+
+@media (max-width: 1000px) {
+  .container {
+    padding: 67px 20px 0 100px;
+  }
+
+  .GetAppNow, .homeLink, .shopifyApps {
+    display: none;
+  }
+
+  .navigation {
+    flex-direction: row;
+    justify-content: flex-end;
+    min-width: 130px;
+  }
+
+  .hamburger {
+    background-color: rgba(255, 255, 255, 0);
+    border: none;
+    display: block;
+  }
+
 }
 
