--- a/nextJS/styles/globals.css
+++ b/nextJS/styles/globals.css
@@ -1,7 +1,7 @@
 html,
 body {
     padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
+    font-family: Montserrat, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     background-color: #232946;
     font-size: 100%;
@@ -19,17 +19,14 @@ a {
 }
 
 .swiper-button-prev {
-    top: auto;
-    left: auto;
-    bottom: 40px;
-    right: 170px;
-
-    width: 70px;
+    width: auto;
+    border:none;
+    background-color: rgba(255, 255, 255, 0);
+    position: static;
+    margin-top: -1px;
 }
 
 .swiper-button-prev::before {
-    bottom: 0;
-    left: 0;
     content: '';
     border-style: solid;
     border-width: 9px 18px 9px 0;
@@ -46,11 +43,11 @@ a {
 }
 
 .swiper-button-next {
-    top: auto;
-    left: auto;
-    bottom: 40px;
-    right: 100px;
-    width: 70px;
+    width: auto;
+    border:none;
+    background-color: rgba(255, 255, 255, 0);
+    position: static;
+    margin-top: -1px;
 }
 
 .swiper-button-next::before {
@@ -77,17 +74,23 @@ a {
 @media (max-width: 1500px) {
     html {
         font-size: 95%;
+        /*letter-spacing: -10px ;*/
     }
 }
 
 @media (max-width: 1150px) {
     html {
-        font-size: 85%;
+        font-size: 80%;
     }
 }
 
 @media (max-width: 850px) {
     html {
-        font-size: 75%;
+        font-size: 70%;
     }
+}
+
+@font-face {
+    font-family: "Montserrat";
+    src: url("../public/fonts/Montserrat-SemiBold.ttf") format("ttf")
 }
