start learn shopify

--- a/nextJS/components/Featured/featured.module.scss
+++ b/nextJS/components/Featured/featured.module.scss
@@ -23,3 +23,16 @@
   color: #FFC20A;
 }
 
+.mobileSlider{
+  display: none;
+}
+
+@media (max-width: 1000px) {
+  .container{
+    display: none;
+  }
+
+  .mobileSlider{
+    display: flex;
+  }
+}
