--- a/nextJS/components/MobileSideBar/mobileSideBar.module.scss
+++ b/nextJS/components/MobileSideBar/mobileSideBar.module.scss
@@ -10,7 +10,7 @@
     font-size: 1.5rem;
     line-height: 20px;
     text-align: center;
-    color: #FFFFFF;
+    color: #191C34;
 
     display: block;
 
@@ -19,10 +19,13 @@
 
 
     background: #FFC20A;
-    box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
+    box-shadow: 0 1px 0 rgba(0, 0, 0, 0.05);
     border-radius: 4px;
 
     width: 90%;
+  }
+  .allAppLink:hover{
+color: #191C34;
   }
 }
 
