--- a/nextJS/components/WeHelp/weHelp.module.scss
+++ b/nextJS/components/WeHelp/weHelp.module.scss
@@ -36,10 +36,21 @@
         width: 50%;
         height: 100%;
         background-color: #2D315420;
-        margin: 0;
+        padding: 25px;
         display: flex;
         flex-direction: column;
-        padding: 12% 0 0 0;
+
+        .descript1 {
+          font-family: Roboto;
+          font-style: normal;
+          font-weight: bold;
+          font-size: 16px;
+          line-height: 19px;
+          text-align: center;
+          letter-spacing: 0.1em;
+          text-transform: capitalize;
+          color: #FFFFFF;
+        }
 
         .countYears {
           font-family: Montserrat;
@@ -150,9 +161,10 @@
       }
     }
 
-    .sectionContainer{
+    .sectionContainer {
       display: flex;
       height: 50%;
+
       .section2 {
         width: 50%;
         height: 100%;
@@ -175,7 +187,7 @@
           font-family: Roboto;
           font-style: normal;
           font-weight: 300;
-          font-size:1.5rem;
+          font-size: 1.5rem;
           line-height: 128.19%;
           letter-spacing: 0.1em;
           text-transform: capitalize;
@@ -186,6 +198,7 @@
         }
 
       }
+
       .section3 {
         height: 100%;
         width: 50%;
@@ -207,8 +220,6 @@
   }
 
   .leftBlock {
-    width: 50%;
-    position: relative;
 
     .primaryText {
       font-family: Montserrat;
@@ -226,41 +237,10 @@
     .section1 {
       width: 100%;
       height: 50%;
-      position: absolute;
-      top: 0;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
-
-      .descript {
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 1.5rem;
-        line-height: 28px;
-        text-align: center;
-        letter-spacing: 0.1em;
-        text-transform: capitalize;
-
-        color: #FFFFFF;
-      }
-
-    }
-
-    .section2 {
-      width: 50%;
-      height: 50%;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      background: rgba(45, 49, 84, 0.2);
-
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
       .descript {
         font-family: Roboto;
         font-style: normal;
@@ -275,46 +255,114 @@
       }
     }
 
-    .section3 {
-      width: 50%;
-      height: 50%;
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      background: rgba(45, 49, 84, 0.3);
-
+    .sectionContainer{
       display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
 
-      .descript1 {
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: bold;
-        font-size: 1.5rem;
-        line-height: 33px;
-        letter-spacing: 0.1em;
-        text-transform: capitalize;
+      .section2 {
+        width: 50%;
 
-        color: #FFFFFF;
+        background: rgba(45, 49, 84, 0.2);
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .descript {
+          font-family: Roboto;
+          font-style: normal;
+          font-weight: bold;
+          font-size: 1.5rem;
+          line-height: 28px;
+          text-align: center;
+          letter-spacing: 0.1em;
+          text-transform: capitalize;
+
+          color: #FFFFFF;
+        }
       }
 
-      .descript2 {
-        font-family: Roboto;
-        font-style: normal;
-        font-weight: 300;
-        font-size: 1.5rem;
-        line-height: 128.19%;
-        letter-spacing: 0.1em;
-        text-transform: capitalize;
+      .section3 {
+        width: 50%;
+        height: 50%;
+        background: rgba(45, 49, 84, 0.3);
 
-        color: #FFFFFF;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
 
-        margin-top: 31px;
+        .descript1 {
+          font-family: Roboto;
+          font-style: normal;
+          font-weight: bold;
+          font-size: 1.5rem;
+          line-height: 33px;
+          letter-spacing: 0.1em;
+          text-transform: capitalize;
+
+          color: #FFFFFF;
+        }
+
+        .descript2 {
+          font-family: Roboto;
+          font-style: normal;
+          font-weight: 300;
+          font-size: 1.5rem;
+          line-height: 128.19%;
+          letter-spacing: 0.1em;
+          text-transform: capitalize;
+
+          color: #FFFFFF;
+
+          margin-top: 31px;
+        }
+
       }
-
     }
-
   }
+}
+
+@media (max-width: 1000px) {
+  .container1 {
+    flex-direction: column-reverse;
+
+    .leftBlock {
+      width: 100%;
+      height: 50%;
+    }
+
+    .gadjetImage {
+      width: auto;
+      height: 50%;
+    }
+  }
+  .container2 {
+    display: block;
+
+    .rightBlock {
+      width: 100%;
+      height: 50%;
+    }
+
+    .manImage {
+      width: auto;
+      height: 50%;
+    }
+  }
+  .container3 {
+  flex-direction: column-reverse;
+
+    .leftBlock {
+      width: 100%;
+      height: 50%;
+    }
+
+    .peopleImage {
+      width: 100%;
+      height: 50%;
+    }
+  }
+
+
 }
